fixed annoying resize on scrollbar appearing

--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,7 @@
+html {
+	overflow-y: scroll;
+}
+
 body {
 	font-family: 'IBM Plex Mono', monospace;
 	color: #000000;
